--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.4.0",
+    "@astrojs/sitemap": "^3.6.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "aos": "^2.3.4",
